Added new game button

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,6 +10,7 @@
   <div class="container">        
   </div>
   <div id="scoreblack">Black</div>
+  <div class="new" id="btn"><a href="#">New Game</a></div>
   <div id="scorewhite">White</div>
 </body>
 </html>
